--- a/evolution/src/index.css
+++ b/evolution/src/index.css
@@ -1,13 +1,39 @@
 body {
   margin: 1px;
   padding: 1px;
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
+button {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  monospace;
+  color: black;
+  border: 1px solid black;
+  background-color: white;
+}
+
+button:active {
+  color: white;
+  background-color: #282c34;
+  border: 1px, solid, black;
+  text-decoration: none;
+}
+
+button:focus {
+  color: #282c34;
+  background-color: white;
+  border: 1px, solid, black;
+  outline: none;
+  text-decoration: none;
+}
+
+button:hover {
+  outline: #282c34 auto 5px;
+}
+
