--- a/evolution/src/intro/Intro.css
+++ b/evolution/src/intro/Intro.css
@@ -3,7 +3,7 @@
 .intro {
     /* display: none; Hidden by default */
     position: fixed; /* Stay in place */
-    /* z-index: 2;  */
+    z-index: 1; 
     padding-top: 100px; /* Location of the box */
     left: 0;
     top: 0;
@@ -15,9 +15,14 @@
     background-color: rgba(0,0,0); /* Black w/ opacity */
     animation: showIntro 2s 1;
 }
+.intro-content {
+    position: relative;
 
+    width: 100%;
+    height: 100%;
+}
 /* Modal Content */
-.intro-content{
+.intro-content1{
     position: fixed; 
     background-color: white;
     padding: 20px;
