--- a/evolution/src/utils/Modal.css
+++ b/evolution/src/utils/Modal.css
@@ -18,6 +18,7 @@
 
 /* Modal Content */
 .modal-content {
+    position: relative;
     background-color: white;
     margin: auto;
     padding: 20px;
@@ -26,17 +27,29 @@
     height: 30%;
 }
 
+.closingSquare {
+    position: absolute;
+    right: 0;
+    top: 0px;
+    background-color: black;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 /* The Close Button */
-.close {
-    color: #aaaaaa;
-    float: right;
+.closeModalX {
+    color: gray;
+    /* align: center; */
     font-size: 28px;
     font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
-    color: #000;
+.closeModalX:hover,
+.closeModalX:focus {
+    color: white;
     text-decoration: none;
     cursor: pointer;
 }
