--- a/evolution/src/index.css
+++ b/evolution/src/index.css
@@ -4,6 +4,7 @@ body {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 0.9em;
 }
 
 code {
