--- a/evolution/src/utils/Modal.css
+++ b/evolution/src/utils/Modal.css
@@ -1,17 +1,13 @@
-
-/* The Modal (background) */
-.modal {
-    /* display: none; Hidden by default */
-    position: fixed; /* Stay in place */
+.modal { /* The Modal (background) */
+    position: fixed;
     z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    padding-top: 100px;
     left: 0;
     top: 0;
     border: 1px solid black;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    /* background-color: rgb(0,0,0); Fallback color */
     background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
     animation: showPopup 0.8s 1;
 }
@@ -25,6 +21,7 @@
     border: 1px solid black;
     width: 50%;
     height: 30%;
+    overflow: auto; /* Enable scroll if needed */
 }
 
 .closingSquare {
