--- a/evolution/src/intro/Intro.css
+++ b/evolution/src/intro/Intro.css
@@ -17,55 +17,104 @@
 }
 .intro-content {
     position: relative;
-
     width: 100%;
     height: 100%;
 }
 /* Modal Content */
-.intro-content1{
+.intro-content1 {
     position: fixed; 
+    display: flex;
     background-color: white;
     padding: 20px;
-    left: 10%;
+    left: 15%;
     top: 10%;
     border: 1px solid black;
-    width: 30%;
-    height: 20%;
+    width: 35%;
+    height: 15%;
     animation: showContent 8s 1;
-    /* animation: showContent 6s 1; */
-    /* animation-delay: 2s; */
+}
+.intro-content1 p {
+    margin: auto;
 }
 
-.intro-content2{
+.intro-content1-img {
+    align-self: right;
+    position: relative;
+    width: 55%;
+    height: 95%;
+}
+
+.intro-content2 {
     position: fixed; 
+    display: flex;
     background-color: white;
     padding: 20px;
-    left: 40%;
-    top: 40%;
+    left: 55%;
+    top: 25%;
     border: 1px solid black;
-    width: 10%;
-    height: 10%;
+    width: 35%;
+    height: 15%;
     animation: showContent2 10s 1;
     /* animation: showContent 6s 1; */
     /* animation-delay: 2s; */
 }
 
-.intro-content3{
+.intro-content2 p {
+    margin: auto;
+}
+
+.intro-content2-img {
+    align-self: right;
+    position: relative;
+    width: 85%;
+    height: 100%;
+}
+
+.intro-content3 {
     position: fixed; 
     background-color: white;
     padding: 20px;
-    left: 60%;
-    top: 60%;
+    left: 20%;
+    top: 55%;
     border: 1px solid black;
-    width: 15%;
+    width: 25%;
     height: 15%;
-    animation: showContent3 12s 1;
-    /* animation: showContent 6s 1; */
-    /* animation-delay: 2s; */
+    animation: showContent3 16s 1;
+}
+
+.intro-content3 p {
+    margin: auto;
+}
+
+.intro-content4 {
+    position: fixed; 
+    display: flex;
+    background-color: white;
+    padding: 20px;
+    left: 50%;
+    top: 65%;
+    border: 1px solid black;
+    width: 35%;
+    height: 15%;
+    animation: showContent4 22s 1;
+}
+
+.intro-content4 p {
+    margin: auto;
+}
+
+.intro-content4-img {
+    align-self: right;
+    position: relative;
+    width: 55%;
+    height: 100%;
 }
 
 /* The Close Button */
 .close {
+    position: fixed; 
+    left: 90%;
+    top: 10%;
     color: #aaaaaa;
     float: right;
     font-size: 28px;
@@ -77,6 +126,13 @@
     color: #000;
     text-decoration: none;
     cursor: pointer;
+}
+
+.intro-continue-button {
+    position: fixed; 
+    left: 45%;
+    top: 90%;
+    animation: showContent4 22s 1;
 }
 
 @keyframes showIntro {
@@ -98,9 +154,9 @@
 @keyframes showContent2 {
     0% {visibility: hidden;
         opacity: 0.0;};
-    40% {visibility: hidden;
+    70% {visibility: hidden;
         opacity: 0.0;}
-        41% {visibility: visible;
+        71% {visibility: visible;
             opacity: 0.0;}
     100% {visibility: visible;
         opacity: 1.0;};
@@ -109,9 +165,20 @@
 @keyframes showContent3 {
     0% {visibility: hidden;
         opacity: 0.0;};
-    50% {visibility: hidden;
+    70% {visibility: hidden;
         opacity: 0.0;}
-        51% {visibility: visible;
+        71% {visibility: visible;
+            opacity: 0.0;}
+    100% {visibility: visible;
+        opacity: 1.0;};
+}
+
+@keyframes showContent4 {
+    0% {visibility: hidden;
+        opacity: 0.0;};
+    70% {visibility: hidden;
+        opacity: 0.0;}
+        71% {visibility: visible;
             opacity: 0.0;}
     100% {visibility: visible;
         opacity: 1.0;};
