--- a/evolution/src/board/YearBar.css
+++ b/evolution/src/board/YearBar.css
@@ -5,13 +5,14 @@
     border: 1px solid black;
     align-items: left;
     margin: 3px;
+    font-size: 0.7em;
 }
 
 .YearBarStripe {
     position: relative;
     height: 90%;
     display:block;
-    margin: 3px;
+    /* margin: 3px; */
     background-color: gray;
     color: white;
 }
